# RayTracingInOneWeekendInRust

./: .gitignore  Cargo.toml  README.md
src/: aabb.rs  bvh.rs  camera.rs  color.rs  hittable.rs  hrpp.rs  lib.rs  main.rs  ray.rs  renderer.rs  sphere.rs  utils.rs
src/geometry/: cube.rs  instance.rs  mod.rs  moving_sphere.rs  rectangle.rs  sphere.rs  triangle.rs
src/materials/: dialectric.rs  diffuse_light.rs  isotropic.rs  lambertian.rs  material.rs  metal.rs  mod.rs  utils.rs
src/textures/: checker.rs  image_texture.rs  marble.rs  mod.rs  solid_color.rs  texture.rs
