[package]
name = "shimmer"
version = "0.1.0"
edition = "2021"
authors = ["John Alberse"]
description = "A CPU-bound ray tracing library"

[lib]
name = "shimmer"
path = "src/lib.rs"

[[bin]]
name = "shimmer"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0.29", features = ["derive", "cargo"] }
crossbeam = "0.8.2"
glam = "0.22.0"
noise = "0.8.2"
palette = "0.6.1"
rand = "0.8.5"
